# galore

./: .gitignore  .neoconf.json  Dockerfile  Makefile  README.md  TODO.norg  galore.desktop  install.sh  install_local.sh  linux_install.sh  meson.build  stylua.toml  todo.md  xdg_install.sh
autoload/health/: galore.vim
doc/: galore.txt  tags
examples/: gpg-tui.lua  khard.lua  snippets.lua
lua/galore/: address-compare.lua  address-util.lua  attach_view.lua  browser.lua  builder.lua  callback.lua  cmp.lua  cmp_nm.lua  cmp_vcard.lua  command.lua  compose.lua  config.lua  crypt-utils.lua  ctx.lua  debug.lua  default.lua  diagnostics.lua  generator.lua  gmime-extra.lua  gmime-util.lua  gmime.lua  health.lua  history.lua  hooks.lua  init.lua  jobs.lua  keymanager.lua  log.lua  match-address.lua  message_action.lua  message_browser.lua  message_view.lua  notmuch-util.lua  notmuch.lua  opts.lua  part_view.lua  reader.lua  render.lua  runtime.lua  saved.lua  (+12 more)
lua/galore/account/: find.lua  init.lua  match.lua
lua/galore/autocrypt/: init.lua
lua/galore/browser/: init.lua  messages.lua  thread_messages.lua  threads.lua
lua/galore/compose/: builder.lua  compose-util.lua  compose.lua  templates.lua  templates2.lua
lua/galore/gmime/: content.lua  convert.lua  crypt.lua  extra.lua  filter.lua  funcs.lua  gmime_ffi.lua  init.lua  object.lua  option.lua  parts.lua  stream.lua  util.lua
lua/galore/hooks/: post.lua  send.lua
lua/galore/lib/: buffer.lua  indexed.lua  ordered.lua  timers.lua
lua/galore/meta/: browser.lua  message_browser.lua  view.lua
plugin/: galore.lua  galore.vim
src/: autocrypt.c  filter-reply.c  galore-address-compare.c  galore-address-compare.h  galore-autocrypt.c  galore-autocrypt.h  galore-filter-reply.c  galore-filter-reply.h  galore-notify.c  galore-notify.h  galore.c  galore.h  meson.build
syntax/: galore-browser.vim  galore-saved.vim  galore-threads.vim
test/: ci_init.sh  init.sh  minimal.vim  test.lua
test/test/: init_spec.lua
tests/: gmime_spec.lua  nm_init.sh  notmuch_spec.lua  reader_spec.lua  render_spec.lua  thread_message_browser_spec.lua  util_spec.lua
tests/tests/: gmime_spec.lua  notmuch_spec.lua  render_spec.lua  thread_message_browser_spec.lua
(+12 files in other folders)
